--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,12 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --default: #fff;
-  --primary: #0f0;
-  --secondary: #0f08;
+@layer base {
+  :root {
+    --default: #fff;
+    --primary: #0f0;
+    --secondary: #0f08;
+  }
 }
-
 @layer components {
   .brand-default {
     @apply bg-gradient-to-r from-purple-400 to-pink-600 bg-clip-text font-extrabold text-transparent;
